chore: fix padding on mobile devices

--- a/src/page-components/collections/collections.module.scss
+++ b/src/page-components/collections/collections.module.scss
@@ -103,6 +103,7 @@
 
 .postsInnerContainer {
   max-width: 800px;
+  padding: 0 2rem;
 }
 
 .chapterListingHeader {
@@ -154,4 +155,5 @@
 
 .markdownContainer {
   color: var(--darkPrimary);
+  padding: 0 2rem;
 }
